<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForceDescriptionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViews.Subtitle"
            android:text="@string/force_name"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViews"
            android:id="@+id/force_name"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViews.Subtitle"
            android:text="@string/force_description"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViews"
            android:id="@+id/force_description"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViews.Subtitle"
            android:text="@string/force_url"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViews.Link"
            android:id="@+id/force_url"
            />

        <!-- Engagement links-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViews.Subtitle"
            android:text="@string/force_engagement_methods"
            />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:id="@+id/force_engagement_list">

       </LinearLayout>


    </LinearLayout>
</ScrollView>